Fix z-index for hover bubbles

--- a/app/cartographers-table-window/index.css
+++ b/app/cartographers-table-window/index.css
@@ -21,7 +21,7 @@
   position: absolute;
   margin-left: 10px;
   top: -5px;
-  z-index: 1;
+  z-index: 100;
 }
 
 .tooltip {
